# log2incident

./: .env.example  .gitignore  README.md  aws_architecture_diagram.py  azure_architecture_diagram.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: config.py
deploy/infra/: ServiceMonitor.yaml  eks-logging-metrics.yaml  istio-demo.yaml  kafka-cluster.yaml  kafka-topics.yaml
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: frontend-backend.spec.js
frontend/src/: App.jsx  App.test.jsx  styles.css
infra/postgres/: init.sql
knowledge/: architecture_decisions.md  architecture_diagram.md  aws_lambda_sqs_etl_latency.md  dynamodb_schema.md  kafka_eks_etl_scaling.md
log2incident/: __init__.py  models.py
log2incident/api_gateway/: Dockerfile  app.py
log2incident/auth/: service.py
log2incident/etl/: __init__.py  etl_filter_service_kafka.py  flink_aggregation.py  flink_job.py  flink_kafka_aggregation.py  kinesis_consumer.py  stream_consumer.py
log2incident/events/: event_creator.py
log2incident/incident_creator/: Dockerfile  __init__.py  incident_creator_service.py
log2incident/incidents/: __init__.py  incident_manager.py
log2incident/ingestion/: sqs_consumer.py
log2incident/log_receiver/: receiver.py
log2incident/model_matching/: model_matcher.py  model_matching_service.py
log2incident/products/: store.py
scripts/: run_api_gateway.py  run_flink_demo.py  run_pipeline.py
tests/: test_flink_demo.py  test_model_matcher.py  test_pipeline.py
(+21 files in other folders)
